--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Divisha's personal site </title>
 </head>
 
-<body>
+<body style="background-color:#D6EFED;">
   <table cellspacing="20">
     <tr>
       <td>
